[package]
name = "library-loader-core"
version = "0.5.0"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
toml = "0.9"
notify = "8.2"
dirs = "6.0"
thiserror = "2"
reqwest = { version = "0.13", features = [ "blocking", "rustls" ], default-features = false }
zip = { version = "4.6.1", default-features = false, features = [ "deflate" ] }
data-encoding = "2.4"
shellexpand = "3"
